fixing some errors