@@ -1,10 +1,18 @@
 group 'DrJekels'
-version '1.0-SNAPSHOT'
+version '0.1.0'
+
+compileJava{
+    sourceCompatibility = "9"
+    targetCompatibility = "9"
+    options.with {
+        fork = true
+        forkOptions.javaHome = new File('/Library/Java/JavaVirtualMachines/jdk-9.jdk')
+        compilerArgs.addAll(['--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'])
+    }
+}
 
 apply plugin: 'java'
 apply plugin: 'application'
-
-sourceCompatibility = 1.9
 
 repositories {
     mavenCentral()
@@ -14,6 +22,14 @@ repositories {
 dependencies {
     compile group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '1.3.0'
     compile group: 'com.ullink.slack', name: 'simpleslackapi', version: '1.0.0'
+}
+
+test {
+    // 
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '4.2.1'
 }
 
 jar {
